--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    color: #282828;
 }
 
 .item-img {
@@ -36,4 +37,16 @@ li {
 .logo {
     size: 18px;
     font-weight: 700;
+}
+
+.img-banner {
+    position: absolute;
+    top: 0;
+    background-color: #cd6858;
+    color: whitesmoke;
+    padding: 10px;
+}
+
+.item {
+    position: relative;
 }
