--- a/index.css
+++ b/index.css
@@ -6,7 +6,15 @@ body {
 }
 
 .item-img {
+    display: block;
     width: 100%;
+}
+
+.caption {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 0 25px;
 }
 
 nav {
@@ -49,4 +57,14 @@ li {
 
 .item {
     position: relative;
+}
+
+button {
+    align-self: center;
+    border: none;
+    background-color: #cd6858;
+    color: whitesmoke;
+    padding: 10px 15px;
+    font-weight: 700;
+    cursor: pointer;
 }
