Adding chatbox css

--- a/index.css
+++ b/index.css
@@ -68,3 +68,27 @@ button {
     font-weight: 700;
     cursor: pointer;
 }
+
+.chatbox-bg {
+    /*
+Challenge:
+1. Position the chatbox in the bottom 
+   corner of the window, 6px from bottom
+   and 6px from the right. 
+*/
+    position: fixed;
+    bottom: 6px;
+    right: 6px;
+    background-color: #dda15e;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 1px 1px 5px #999;
+}
+
+.chatbox-img {
+    margin: auto;
+    width: 50%;
+}
